testsuite/positive/anonymous-classes-opt.n
using System.Console;
using Nemerle.Extensions;

[assembly: AnonymousClassOptions( Visibility = Public )]

module Program {

    Main() : void {
        def x = new(a = "bla", b = 10);
        def t = x.GetType();
        if(t.IsPublic)
            WriteLine("OK");
        else
            WriteLine("Fail");
    }

}
/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/