testsuite/negative/anonymous-classes-1.n
using Nemerle.Extensions;

module Program {

    Main() : void {
        def _x = new (a = 10, 1 = 1);    // E: Expected
        def _y = new [a, a.b] (1, 2);   // E: Field name expected
        def _z = new [a, b, c] (1, 2);  // E: Invalid argument list
    }

}